sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: ')' expected but 'for' found.
		for (i <- 0 to getNombreValeur() - 2) {
                ^AlgBubbleSort1:12: error: 'while' expected but ')' found.
	)
        ^AlgBubbleSort1:15: error: '(' expected but '}' found.
}
^