sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var swapped = true;
	do (
		swapped = false
		for (i <- 0 to getNombreValeur() - 2) {
			if ( plusPetit( i , i+1 ) ){
				 echange ( i , i+1 )
				 swapped = true; 
				}
			}
	)
	while ( swapped == true ) 

}

